kio_fonts: fix the thumbnails creation by tweaking the USEntry fields

- Set the fancy name, e.g. "Foo, Bold Italic", as UDS_DISPLAY_NAME
- Set the actual file name, e.g. foo-bold.ttf, as UDS_NAME
- Set the actual file url, e.g. /usr/share/fonts/truetype/foo-bold.ttf as UDS_URL

Setting the UDS_URL fixes font thumbnail creation when using kio_fonts.
And IIUC, also avoids calling get() on "font:/" urls, the files are already
local; setting the UDS_URL makes all the font previews work on my system
at least.

BUG: 234754
FIXED-IN: 5.23